# amfoss_tasks

./: README.md
introspection/: README.md
task -11/: Poster
task-00/: README.md
task-01/: README.md
task-03/: Great Eye  README.md  Ryuk and his Death Notes
task-04/: MathsQuiz.java  README.md
task-05/: Cargo.toml  README.md  main.rs
task-08/: README.md
task-10/CS50/pset-1/: README.md  hello.c  mario.c
task-11/: README.md
task-15/: Euler 001  Euler 002  Euler 003  README.md
task-2/: README.md
task-3/: Homework Time
