[package]
name = "hello_cargo"
version = "0.1.0"
authors = ["root"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
select = "0.5.0"
prettytable-rs = "^0.8"
error-chain = "*"
